--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 "scripts": {
-  "start": "RelebogileChiloane"
+  "start": "node server.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
 }
-{
   "name": "real-time-chat-app",
   "version": "1.0.0",
   "description": "A real-time chat application",
